pkg/manifestclienttest/testdata/must-gather-01/namespaces/openshift-console/route.openshift.io/routes.yaml
---
apiVersion: route.openshift.io/v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 5m
    creationTimestamp: "2023-12-06T09:39:06Z"
    labels:
      app: console
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:haproxy.router.openshift.io/timeout: {}
          f:labels:
            .: {}
            f:app: {}
        f:spec:
          f:host: {}
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: console
      operation: Update
      time: "2023-12-06T09:39:06Z"
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:ingress: {}
      manager: openshift-router
      operation: Update
      subresource: status
      time: "2023-12-06T09:39:06Z"
    name: console
    namespace: openshift-console
    resourceVersion: "31980"
    uid: 11e54caf-cf88-4585-99c3-e961ce81e1d2
  spec:
    host: console-openshift-console.apps.ci-op-2j285qtr-234c7.origin-ci-int-aws.dev.rhcloud.com
    port:
      targetPort: https
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    to:
      kind: Service
      name: console
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-12-06T09:39:06Z"
        status: "True"
        type: Admitted
      host: console-openshift-console.apps.ci-op-2j285qtr-234c7.origin-ci-int-aws.dev.rhcloud.com
      routerCanonicalHostname: router-default.apps.ci-op-2j285qtr-234c7.origin-ci-int-aws.dev.rhcloud.com
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-12-06T09:39:06Z"
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:host: {}
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: console
      operation: Update
      time: "2023-12-06T09:39:06Z"
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:ingress: {}
      manager: openshift-router
      operation: Update
      subresource: status
      time: "2023-12-06T09:39:06Z"
    name: downloads
    namespace: openshift-console
    resourceVersion: "32021"
    uid: e0d1ac87-41c4-4556-8fe7-b17b90f919cb
  spec:
    host: downloads-openshift-console.apps.ci-op-2j285qtr-234c7.origin-ci-int-aws.dev.rhcloud.com
    port:
      targetPort: http
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: downloads
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-12-06T09:39:06Z"
        status: "True"
        type: Admitted
      host: downloads-openshift-console.apps.ci-op-2j285qtr-234c7.origin-ci-int-aws.dev.rhcloud.com
      routerCanonicalHostname: router-default.apps.ci-op-2j285qtr-234c7.origin-ci-int-aws.dev.rhcloud.com
      routerName: default
      wildcardPolicy: None
kind: RouteList
metadata:
  resourceVersion: "47680"
